--- a/02hangukuniversity/index.html
+++ b/02hangukuniversity/index.html
@@ -3,53 +3,34 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>hankucuniversity</title>
-
+	<title>한국대학교</title>
 	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/jquery.bxslider.css">
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/style.css">
 
+	<script src="js/jquery-3.1.1.min.js"></script>
+	<script src="js/jquery.bxslider.js"></script>
 </head>
 <body>
 	<header id="header">
-		<div class="bgc_hkblue01">
-			<div class="container headertop clearfix">
-				<ul class="hdtopmenu clearfix tac">
-					<li>대학교</li>
-					<li>입학안내</li>
-					<li>대학원</li>
+		<div class="util_menu_wrap">
+			<div class="util_menu clearfix">
+				<ul class="left clearfix">
+					<li><a href="#">대학교</a></li>
+					<li><a href="#">입학안내</a></li>
+					<li><a href="#">대학원</a></li>
 				</ul>
-				<ul class="hdtoputil clearfix">
-					<li class="clearfix">글자크기
-						<div class="butten_plus"></div>
-						<div class="butten_minus"></div>
-					</li>
-					<li>찾아오시는길</li>
-					<li>ENGLISH</li>
-					<li>사이트맵</li>
+				<ul class="right clearfix">
+					<li>글자크기</li>
+					<li><a href="#">-</a></li>
+					<li><a href="#">+</a></li>
+					<li><a href="#">찾아오시는길</a></li>
+					<li><a href="#">ENGLISH</a></li>
+					<li><a href="#">사이트맵</a></li>
 				</ul>
 			</div>
-		</div>
-		<div class="container headerbottom clearfix">
-			<div class="logo clearfix">
-				<div></div>
-				<h2>한국대학교</h2>
-				<p>HANGUKUNIVERSITY</p>
-			</div>
-			<ul class="menu_button clearfix">
-				<li class="bgc_gray"></li>
-				<li class="button_login"></li>
-			</ul>
-			<ul class="gnb clearfix">
-				<li>대학소개</li>
-				<li>학과소개</li>
-				<li>학사안내</li>
-				<li>대학생활</li>
-				<li>학생지원센터</li>
-			</ul>
 		</div>
 	</header>
-
-
 </body>
 </html>
