--- a/02hangukuniversity/index.html
+++ b/02hangukuniversity/index.html
@@ -16,21 +16,38 @@
 	<header id="header">
 		<div class="util_menu_wrap">
 			<div class="util_menu clearfix">
-				<ul class="left clearfix">
-					<li><a href="#">대학교</a></li>
+				<ul class="left clearfix tac">
+					<li><a href="#" class="active">대학교</a></li>
 					<li><a href="#">입학안내</a></li>
 					<li><a href="#">대학원</a></li>
 				</ul>
 				<ul class="right clearfix">
 					<li>글자크기</li>
-					<li><a href="#">-</a></li>
-					<li><a href="#">+</a></li>
+					<li class="btn_mp clearfix">
+						<a href="#">-</a>
+						<a href="#">+</a>
+					</li>
 					<li><a href="#">찾아오시는길</a></li>
 					<li><a href="#">ENGLISH</a></li>
 					<li><a href="#">사이트맵</a></li>
 				</ul>
 			</div>
 		</div>
+		<div class="header_bottom_wrap">
+			<div class="logo"><a href="#"><img src="" alt=""></a></div>
+			<ul class="gnb">
+				<li><a href="#">대학소개</a></li>
+				<li><a href="#">학과소개</a></li>
+				<li><a href="#">학사안내</a></li>
+				<li><a href="#">대학생활</a></li>
+				<li><a href="#">학생지원센터</a></li>
+				<li class="gnb_button">
+					<a href="#"></a>
+					<a href="#"></a>
+				</li>
+			</ul>
+		</div>
+
 	</header>
 </body>
 </html>
