--- a/02hangukuniversity/index_pr.html
+++ b/02hangukuniversity/index_pr.html
@@ -3,17 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>hangukuniversity</title>
+	<title>hankuguniversity</title>
 
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/jquery.bxslider.css">
 	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/style1.css">
-
-	<script src="js/jquery-3.1.1.min.js"></script>
-	<script src="js/jquery.bxslider.js"></script>
-
-
+	<link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
