--- a/02hangukuniversity/index.html
+++ b/02hangukuniversity/index.html
@@ -33,21 +33,22 @@
 				</ul>
 			</div>
 		</div>
-		<div class="header_bottom_wrap">
-			<div class="logo"><a href="#"><img src="" alt=""></a></div>
-			<ul class="gnb">
+		<div class="header_bottom_wrap container clearfix">
+			<div class="logo"><a href="#"><img src="images/logo_01.jpg" alt=""></a></div>
+			<ul class="gnb clearfix">
 				<li><a href="#">대학소개</a></li>
 				<li><a href="#">학과소개</a></li>
 				<li><a href="#">학사안내</a></li>
 				<li><a href="#">대학생활</a></li>
 				<li><a href="#">학생지원센터</a></li>
-				<li class="gnb_button">
+				<li class="gnb_button clearfix">
 					<a href="#"></a>
 					<a href="#"></a>
 				</li>
 			</ul>
 		</div>
-
 	</header>
+	
+	
 </body>
 </html>
