--- a/02hangukuniversity/index.html
+++ b/02hangukuniversity/index.html
@@ -11,6 +11,13 @@
 
 	<script src="js/jquery-3.1.1.min.js"></script>
 	<script src="js/jquery.bxslider.js"></script>
+
+	<script>
+		$(document).ready(function(){
+			$(".slider01").bxSlider({pager:false,});
+		});
+
+	</script>
 </head>
 <body>
 	<header id="header">
@@ -48,7 +55,125 @@
 			</ul>
 		</div>
 	</header>
-	
-	
+	<div id="contents">
+		<section class="title clearfix">
+			<div class="titletxt">
+				<p>함께 나누며 세상을 이끌어</p>
+				<h2>세계로향하는 한국대학교</h2>
+			</div>
+			<ul class="titleicon clearfix">
+				<li>
+					<img src="images/main_icon01.png" alt="">
+					<a href="#">입학절차안내</a>
+				</li>
+				<li>
+					<img src="images/main_icon02.png" alt="">
+					<a href="#">입학설명회</a>
+				</li>
+				<li>
+					<img src="images/main_icon03.png" alt="">
+					<a href="#">장학제도</a>
+				</li>
+				<li>
+					<img src="images/main_icon04.png" alt="">
+					<a href="#">증명서발급</a>
+				</li>
+			</ul>
+		</section>
+		<div class="container">
+			<ul class="maincontent clearfix">
+				<li>
+					<ul class="slider01">
+						<li>
+							<img src="images/content_img01.jpg" alt="">
+							<div class="slider01txt">
+								<p><strong>한국</strong>에서<br><strong>시작</strong>하는<br>새로운 <strong>꿈1</strong></p>
+								<a href="#">자세히보기</a>
+							</div>
+						</li>
+						<li>
+							<img src="images/content_img01.jpg" alt="">
+							<div class="slider01txt">
+								<p><strong>한국</strong>에서<br><strong>시작</strong>하는<br>새로운 <strong>꿈2</strong></p>
+								<a href="#">자세히보기</a>
+							</div>
+						</li>
+						<li>
+							<img src="images/content_img01.jpg" alt="">
+							<div class="slider01txt">
+								<p><strong>한국</strong>에서<br><strong>시작</strong>하는<br>새로운 <strong>꿈3</strong></p>
+								<a href="#">자세히보기</a>
+							</div>
+						</li>
+					</ul>
+				</li>
+				<li class="mct02">
+					<img src="images/content_img02.jpg" alt="">
+					<div class="mct02txt p_hk02">
+						<p><strong>APP</strong>으로<br><strong>스마트 도서관</strong><br>바로이용하자!</p>
+						<p>모바일 열람증은<br>도서관 자료실 / 도서대출 등에<br>사용 할 수 있습니다.</p>
+						<a href="#">자세히보기</a>
+					</div>
+				</li>
+				<li class="mct03 p_hk03 bgc_hkblue02">
+					<h2>HOT LINK</h2>
+					<ul class="mct03icon clearfix">
+						<li>
+							<img src="images/content_icon01.png" alt="">
+							<a href="#"><p>국제교류<br>센터</p></a>
+						</li>
+						<li>
+							<img src="images/content_icon02.png" alt="">
+							<a href="#"><p>원격지원<br>시스템</p></a>
+						</li><li>
+							<img src="images/content_icon03.png" alt="">
+							<a href=""><p>예산/결산<br>공고</p></a>
+						</li>
+					</ul>
+				</li>
+				<li class="mct04 p_hk03">
+					<h2>공지사항</h2>
+					<ul>
+						<li><a href="#"><p>[공지] 한국대학교 웹진...</p><p>2016-06-12</p></a></li>
+						<li><a href="#"><p>[보도] 우수대학교 선정 수상</p><p>2016-06-17</p></a></li>
+						<li><a href="#"><p>[공지] 대학입시 설명회</p><p>2016-06-05</p></a></li>
+						<li><a href="#"><p>[공지] 2016년 1학기 성적...</p><p>2016-05-14</p></a>></li>
+					</ul>
+				</li>
+				<li class="mct05 p_hk03">
+					<h2>SNS NEWS</h2>
+					<div>
+						<img src="images/content_img04.jpg" alt="">
+						<p>한국 대학교는 2017학년도 신입생 입학실을 3월 2일(목) 본교 종합체육관 ... </p>
+					</div>
+					<div class="sns">
+						<a href="#"><img src="" alt=""></a>
+						<a href="#"><img src="" alt=""></a>
+						<a href="#"><img src="" alt=""></a>
+						<a href="#"><img src="" alt=""></a>
+					</div>
+				</li>
+				<li class="mct06">
+					<div>캠퍼스 투어</div>
+				</li>
+				<li class="mct07">
+					<a href="#"><img src="" alt=""></a>
+				</li>
+				<li>
+					<ul class="slider02">
+						<li>
+							<img src="images/content_img07.jpg" alt="">
+							<div class="slider02txt">
+								<p>2017년신.편입생2차모집</p>
+								<h2>2017.7.1 ~ 7. 10</h2>
+								<a href="#">입학사전예약</a>
+							</div>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+	</div>
+
 </body>
 </html>
