--- a/02hangukuniversity/index.html
+++ b/02hangukuniversity/index.html
@@ -134,17 +134,17 @@
 				<li class="mct04 p_hk03">
 					<h2>공지사항</h2>
 					<ul>
-						<li><a href="#"><p>[공지] 한국대학교 웹진...</p><p>2016-06-12</p></a></li>
-						<li><a href="#"><p>[보도] 우수대학교 선정 수상</p><p>2016-06-17</p></a></li>
-						<li><a href="#"><p>[공지] 대학입시 설명회</p><p>2016-06-05</p></a></li>
-						<li><a href="#"><p>[공지] 2016년 1학기 성적...</p><p>2016-05-14</p></a>></li>
+						<li><a href="#" class="clearfix"><span>[공지] 한국대학교 웹진...</span><span>2016-06-12</span></a></li>
+						<li><a href="#" class="clearfix"><span>[보도] 우수대학교 선정 수상</span><span>2016-06-17</span></a></li>
+						<li><a href="#" class="clearfix"><span>[공지] 대학입시 설명회</span><span>2016-06-05</span></a></li>
+						<li><a href="#" class="clearfix"><span>[공지] 2016년 1학기 성적...</span><span>2016-05-14</span></a></li>
 					</ul>
 				</li>
 				<li class="mct05 p_hk03">
 					<h2>SNS NEWS</h2>
-					<div>
+					<div class="mct05main clearfix">
 						<img src="images/content_img04.jpg" alt="">
-						<p>한국 대학교는 2017학년도 신입생 입학실을 3월 2일(목) 본교 종합체육관 ... </p>
+						<a href="#">한국 대학교는 2017학년도 신입생 입학실을 3월 2일(목) 본교 종합체육관 ...</a>
 					</div>
 					<div class="sns">
 						<a href="#"><img src="" alt=""></a>
@@ -157,15 +157,15 @@
 					<div>캠퍼스 투어</div>
 				</li>
 				<li class="mct07">
-					<a href="#"><img src="" alt=""></a>
+					<a href="#"><img src="images/content_btn.png" alt=""></a>
 				</li>
 				<li>
 					<ul class="slider02">
 						<li>
 							<img src="images/content_img07.jpg" alt="">
 							<div class="slider02txt">
-								<p>2017년신.편입생2차모집</p>
-								<h2>2017.7.1 ~ 7. 10</h2>
+								<p>2017년신.편입생2차모집1</p>
+								<h2>2017.7.1~7.10</h2>
 								<a href="#">입학사전예약</a>
 							</div>
 						</li>
