--- a/02hangukuniversity/index.html
+++ b/02hangukuniversity/index.html
@@ -15,6 +15,7 @@
 	<script>
 		$(document).ready(function(){
 			$(".slider01").bxSlider({pager:false,});
+			$(".slider02").bxSlider({controls:false,});
 		});
 
 	</script>
@@ -165,6 +166,30 @@
 							<img src="images/content_img07.jpg" alt="">
 							<div class="slider02txt">
 								<p>2017년신.편입생2차모집1</p>
+								<h2>2017.7.1~7.10</h2>
+								<a href="#">입학사전예약</a>
+							</div>
+						</li>
+						<li>
+							<img src="images/content_img07.jpg" alt="">
+							<div class="slider02txt">
+								<p>2017년신.편입생2차모집2</p>
+								<h2>2017.7.1~7.10</h2>
+								<a href="#">입학사전예약</a>
+							</div>
+						</li>
+						<li>
+							<img src="images/content_img07.jpg" alt="">
+							<div class="slider02txt">
+								<p>2017년신.편입생2차모집3</p>
+								<h2>2017.7.1~7.10</h2>
+								<a href="#">입학사전예약</a>
+							</div>
+						</li>
+						<li>
+							<img src="images/content_img07.jpg" alt="">
+							<div class="slider02txt">
+								<p>2017년신.편입생2차모집4</p>
 								<h2>2017.7.1~7.10</h2>
 								<a href="#">입학사전예약</a>
 							</div>
