--- a/02hangukuniversity/index.html
+++ b/02hangukuniversity/index.html
@@ -95,7 +95,7 @@
 							</div>
 						</li>
 						<li>
-							<img src="images/content_img01.jpg" alt="">
+							<img src="images/content_img01-2.jpg" alt="">
 							<div class="slider01txt">
 								<p><strong>한국</strong>에서<br><strong>시작</strong>하는<br>새로운 <strong>꿈2</strong></p>
 								<a href="#">자세히보기</a>
@@ -117,7 +117,7 @@
 					<div class="mct02txt p_hk02">
 						<p><strong>APP</strong>으로<br><strong>스마트 도서관</strong><br>바로이용하자!</p>
 						<p>모바일 열람증은<br>도서관 자료실 / 도서대출 등에<br>사용 할 수 있습니다.</p>
-						<a href="#">자세히보기</a>
+						<a href="#" onclick="return false">자세히보기</a>
 					</div>
 				</li>
 				<li class="mct03 p_hk03 bgc_hkblue02">
@@ -222,11 +222,13 @@
 					<li><a href="">이메일 무단수집거부</a></li>
 				</ul>
 			</li>
-			<li>대표자 : 홍길동 &nbsp; 서울특별시 구로구 구로로 300(구로동 6가) &nbsp; 사업자등록번호 : 123-56-7890234</li>
-			<li>통신판매업 신고번호 : 제 1234-서울 구로구-1004호 &nbsp; 개인정보관리 책임자 : 홍길동 &nbsp; 소비자피해보상보험</li>
-			<li>고객센터 : 1234-5678 &nbsp;  FAX : 02-1234-5678 &nbsp; HANGUKUNIVERSITY @HANGUK.COM</li>
-			<li>COPYRIGHT (C) HANGUK. ALL RIGHTS RESERVED.</li>
 		</ul>
+		<p>
+			대표자 : 홍길동 &nbsp; 서울특별시 구로구 구로로 300(구로동 6가) &nbsp; 사업자등록번호 : 123-56-7890234<br>
+			통신판매업 신고번호 : 제 1234-서울 구로구-1004호 &nbsp; 개인정보관리 책임자 : 홍길동 &nbsp; 소비자피해보상보험<br>
+			고객센터 : 1234-5678 &nbsp;  FAX : 02-1234-5678 &nbsp; HANGUKUNIVERSITY @HANGUK.COM
+		</p>
+		<p>COPYRIGHT (C) HANGUK. ALL RIGHTS RESERVED.</p>
 	</footer>
 </body>
 </html>
