--- a/chavy/index.html
+++ b/chavy/index.html
@@ -14,7 +14,7 @@
 
 	<script>
 		$(document).ready(function(){
-			$(".mainslider").bxSlider({controls:false, pager:false,});
+			$(".mainslider").bxSlider({controls:false, pager:false, auto:true});
 		});
 	</script>
 
@@ -24,29 +24,155 @@
 	<header class="header container clearfix">
 		<h1 class="logo"><a href="javascript:void(0)"><img src="images/logo02.png" alt=""></a></h1>
 		<ul class="gnb">
-			<li><a href="javascript:void(0)">Menu1</a></li>
-			<li><a href="javascript:void(0)">Menu2</a></li>
-			<li><a href="javascript:void(0)">Menu3</a></li>
-			<li><a href="javascript:void(0)">Menu4</a></li>
+			<li><a href="javascript:void(0)">Home</a></li>
+			<li><a href="javascript:void(0)">How It Works</a></li>
+			<li><a href="javascript:void(0)">Company</a></li>
+			<li><a href="javascript:void(0)">Career</a></li>
 		</ul>
 		<ul class="utilmenu tac">
 			<li class="ch_hover"><a href="javascript:void(0)">Sign in</a></li>
 			<li class="active ch_hover"><a href="javascript:void(0)">Register</a></li>
 		</ul>
 	</header>
-	<div class="ms_wrap">
-		<ul class="mainslider">
-			<li>
-				<img src="images/mb_img01.jpg" alt="mb">	
+	
+	<ul class="mainslider">
+		<li>
+			<div class="ms_wrap">
+				<img src="images/mb_img02.jpg" alt="mb" >	
 				<div class="txt">
-					<h2>Lorem ipsum dolor sit, amet, <span class="ch_c02">consectetur adipisicing elit1.</span></h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt asperiores minus quasi recusandae architecto exercitationem quos omnis consequatur facere. Consequatur.</p>
-					<a href="javascript:void(0)">Request Demo</a>
+					<h2 class="mt_pb">Lorem ipsum dolor sit, amet, <span class="ch_c02">consectetur adipisicing elit1.</span></h2>
+					<p class="txt_pb ch_c03">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat nulla cum esse sunt quisquam sed?</p>
+					<a class="ch_hover ch_bgc01 tac" href="javascript:void(0)">Request Demo</a>
 				</div>
-			</li>
+			</div>
+		</li>
+		<li>
+			<div class="ms_wrap">
+				<img src="images/mb_img02.jpg" alt="mb" >	
+				<div class="txt">
+					<h2 class="mt_pb">Lorem ipsum dolor sit, amet, <span class="ch_c02">consectetur adipisicing elit2.</span></h2>
+					<p class="txt_pb ch_c03">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum error, illo soluta et voluptates necessitatibus perferendis.</p>
+					<a class="ch_hover ch_bgc01 tac" href="javascript:void(0)">Request Demo</a>
+				</div>
+			</div>
+		</li>
+	</ul>
+
+	<div class="banner01 tac ch_bgc02 bn_pt">
+		<h2 class="mt_pb">Lorem, ipsum dolor <span class="ch_c02">sit amet, consectetur adipisicing.</span></h2>
+		<p class="ch_c03">Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br>Architecto dolor earum deserunt aliquam nulla omnis quaerat modi amet.</p>
+	</div>
+	
+	<div class="cont01 container clearfix">
+		<div class="cont01txt">
+			<h2 >Lorem ipsum dolor sit amet consectetur adipisicing elit.<span class="ch_c02">Ut iste soluta natus.</span></h2>
+			<p class="ch_c03">Lorem ipsum dolor sit amet, consectetur, adipisicing elit. Dolor cum laborum incidunt sint reiciendis expedita, ad dolore, reprehenderit ipsum aliquam.</p>
+			<a class="ch_hover ch_bgc01 tac" href="javascript:void(0)">Request Demo</a>
+		</div>
+		<ul class="cont01menu tac clearfix">
+			<li class="ch_hover2"><a href="javascript:void(0)">
+				<img src="images/icon01_01.jpg" alt="">
+				<p>Registration<br>Guide</p>
+			</a></li>
+			<li class="ch_hover2"><a href="javascript:void(0)">
+				<img src="images/icon01_02.jpg" alt="">
+				<p>Live Call<br>Support</p>
+			</a></li>
+			<li class="ch_hover2"><a href="javascript:void(0)">
+				<img src="images/icon01_03.jpg" alt="">
+				<p>Secured<br>Payment</p>
+			</a></li>
+			<li class="ch_hover2"><a href="javascript:void(0)">
+				<img src="images/icon01_04.png" alt="">
+				<p>Track Your<br>Move</p>
+			</a></li>
 		</ul>
 	</div>
 
+	<div class="cont02wrap ch_bgc02">
+		<div class="cont02 container clearfix">
+			<div class="cont02txt">
+				<h2>Lorem ipsum <span class="ch_c02">dolor sit amet</span> consectetur adipisicing elit.</h2>
+				<p class="ch_c03">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio illo aspernatur, corporis nemo iste voluptatem.</p>
+				<a class="ch_hover ch_bgc01 tac" href="javascript:void(0)">Explore Product</a>
+			</div>
+			<img src="images/img03_01.jpg" alt="">
+		</div>
+	</div>
 
+	<div class="cont03 container tac">
+		<h2>Lorem ipsum dolor sit, amet <span class="ch_c02">consectetur adipisicing elit.</span></h2>
+		<div class="cont03btn clearfix">
+			<a class="ch_hover ch_bgc01 tac active" href="javascript:void(0)">For Employers</a>
+			<a class="ch_hover ch_bgc02 tac " href="javascript:void(0)">For Owners</a>
+		</div>
+	</div>
+
+	<div class="cont04 container">
+		<div class="cont04txt">
+			<h2 class="tac">Lorem ipsum <span class="ch_c02">dolor sit.</span></h2>
+			<p class="ch_c03 tac">Lorem ipsum, dolor, sit amet consectetur adipisicing elit.<br>Facilis qui porro minima dolorem aperiam voluptatum.</p>
+		</div>
+		<ul class="cont04menu">
+			<li class="ch_hover2"><a class="clearfix" href="javascript:void(0)">
+				<span class="left">1. Does It work?</span>
+				<span class="right">→</span>
+			</a></li>
+			<li class="ch_hover2"><a class="clearfix" href="javascript:void(0)">
+				<span class="left">2. What is the financial plan</span>
+				<span class="right">→</span>
+			</a></li>
+			<li class="ch_hover2"><a class="clearfix" href="javascript:void(0)">
+				<span class="left">3. Can I know how it works?</span>
+				<span class="right">→</span>
+			</a></li>
+			<li class="ch_hover2"><a class="clearfix" href="javascript:void(0)">
+				<span class="left">4. How many employers can i expect?</span>
+				<span class="right">→</span>
+			</a></li>
+		</ul>
+	</div>
+
+	<div class="cont05 container clearfix">
+		<div class="cont05txt">
+			<h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit.<span class="ch_c02">distinctio aliquid excepturi nisi.</span> Veritatis.</h2>
+			<p class="ch_c03">Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Quae ex, fugit commodi numquam.</p>
+			<a class="ch_hover ch_bgc01 tac" href="javascript:void(0)">Request a Demo</a>
+		</div>
+		<img src="images/img05.jpg" alt="">
+	</div>
+
+	<footer class="footerwrap ch_bgc02">
+		<div class="footer container clearfix ch_c03">
+			<div class="ft_left">
+				<img src="images/logo03.jpg" alt="">
+				<p>Lorem ipsum dolor sit amet consectetur. <br><br><br>Lorem, ipsum, dolor. <br>Lorem ipsum dolor sit. <br>Lorem ipsum, dolor sit.</p>
+			</div>
+			<div class="ft_right clearfix">
+				<ul class="ft_util">
+					<h3 class="ch_c01">ABOUT</h3>
+					<li><a href="javascript:void(0)">Why Solution</a></li>
+					<li><a href="javascript:void(0)">What We Do</a></li>
+					<li><a href="javascript:void(0)">Testimonitals</a></li>
+				</ul>
+				<ul class="ft_util">
+					<h3 class="ch_c01">PRODUCT</h3>
+					<li><a href="javascript:void(0)">How It Works</a></li>
+					<li><a href="javascript:void(0)">Features</a></li>
+					<li><a href="javascript:void(0)">FAQ</a></li>
+				</ul>
+				<ul class="ft_util">
+					<h3 class="ch_c01">COMPANY</h3>
+					<li><a href="javascript:void(0)">Team</a></li>
+					<li><a href="javascript:void(0)">Careers</a></li>
+				</ul>
+			</div>
+			<div class="ft_bottom clearfix">
+				<p class="copy">Copyright(c)2020. Syed Roni behalf of isketch. All Rights Reserved.</p>
+				<a class="right" href="javascript:void(0)">PRIVACY POLICY</a>
+				<a class="right" href="javascript:void(0)">TERMS OF SERVICE</a>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
